fix for the small break on the landing page

--- a/source/scss/_media-queries.scss
+++ b/source/scss/_media-queries.scss
@@ -152,7 +152,7 @@
 	}
 
 	.page-home {
-
+		padding-bottom: 26px;
 		.hexagon-item:nth-last-child(1),
 		.hexagon-item:nth-last-child(2),
 		.hexagon-item:nth-last-child(3) {
